--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -5,7 +5,7 @@
     height: 95%;
 
     .day-header {
-        align-self: center;
+        // align-self: center;
         margin-bottom: 10px;
     }
 
