--- a/src/assets/styles/views/journal.scss
+++ b/src/assets/styles/views/journal.scss
@@ -13,5 +13,9 @@
 
     @media (max-width:650px) {
         flex-direction: column;
+
+        .day-container {
+            height: 600px;
+        }
     }
 }
