--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -12,10 +12,11 @@ html {
     line-height: 1.6;
     color: $clr2;
     background-color: #e1eceb;
-
+    
 }
 
 body {
+    background-color: #e1eceb;
     font-size: rem(18px);
     margin: 0;
     font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
