--- a/src/assets/styles/cmps/_user-msg.scss
+++ b/src/assets/styles/cmps/_user-msg.scss
@@ -1,16 +1,21 @@
-
-
 .alert {
-    background-color: lightgray;
+    background-color: white;
     position: absolute;
-    top: 0;
-    right: 0.5em;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%);
     padding: 1em;
+    width: 80%;
+    border-radius: 10px;
+    z-index: 100;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+font-weight: 500;
+
     &.alert-success {
-        background-color: lightgreen;
+        // background-color: lightgreen;
     }
+
     &.alert-error {
         background-color: lightcoral;
     }
 }
-
