--- a/src/assets/styles/cmps/_user-msg.scss
+++ b/src/assets/styles/cmps/_user-msg.scss
@@ -1,15 +1,20 @@
 .alert {
     background-color: white;
-    position: absolute;
-    top: 20px;
+    position: fixed;
+    top: -100px;
     left: 50%;
     transform: translate(-50%);
     padding: 1em;
-    width: 80%;
+    width: 90%;
     border-radius: 10px;
     z-index: 100;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-font-weight: 500;
+    font-weight: 500;
+    transition: 1.6s;
+
+    &.scroll-down {
+        transform: translate(-50%, 180%);
+    }
 
     &.alert-success {
         // background-color: lightgreen;
