--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -29,9 +29,9 @@
 
     .student-slot {
         position: absolute;
-        width: 70%;
+        width: 80%;
         height: 100%;
-        right: 0;
+        right: 0%;
         z-index: 20;
     }
 
@@ -41,6 +41,7 @@
         justify-content: space-around;
         background-color: lightblue;
         border-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
         p {
             font-size: 16px;
