--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -4,6 +4,7 @@
         flex-wrap: wrap;
         padding: 0;
         margin: 0;
+        gap: 10px;
 
         li {
             flex: 1 0 auto;
@@ -12,6 +13,8 @@
             padding: 0;
             margin: 1%;
             width: calc(25% - 1%);
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
             a {
                 display: flex;
                 flex-direction: column;
@@ -38,7 +41,7 @@
 
     @media (max-width:650px) {
         .student-list {
-            li{
+            li {
                 width: 100%;
             }
         }
