--- a/src/assets/styles/cmps/_student-list.scss
+++ b/src/assets/styles/cmps/_student-list.scss
@@ -7,7 +7,7 @@
         background-color: $clr2;
         color: $clr6;
         padding: 5px;
-        margin: 5px;
+        // margin: 5px;
     }
 
     a {
@@ -16,10 +16,10 @@
     }
 
     pre {
-        background-color: #ddd;
-        font-size: .5em;
-        color: #333;
-        padding: .2em;
-        margin: .2em;
+        // background-color: #ddd;
+        // font-size: .5em;
+        // color: #333;
+        // padding: .2em;
+        // margin: .2em;
     }
 }
