--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -11,7 +11,7 @@
             border-radius: 10px;
             margin: 0;
             padding: 0;
-            margin: 1%;
+            // margin: 1%;
             width: calc(25% - 1%);
             box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
