--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -57,4 +57,12 @@
         }
 
     }
+
+    @media (max-width:650px) {
+        flex-direction: column;
+        gap: 20px;
+        >* {
+            width: 100%;
+        }
+    }
 }
