--- a/src/assets/styles/views/user-details.scss
+++ b/src/assets/styles/views/user-details.scss
@@ -11,6 +11,7 @@
         "some student student"
         "some student student"
     ;
+
     >* {
         background-color: $clr6;
         padding: 15px;
@@ -45,17 +46,43 @@
 
     .student-info {
         grid-area: student;
+
+        .lessons-imgs {
+            display: flex;
+            justify-content: space-around;
+
+            img {
+                width: 30px;
+            }
+        }
     }
 
-    .monthly-income {
+    .monthly-income-container {
         grid-area: monthly;
+        background-color: $clr1;
+        display: flex;
+        flex-direction: column;
+
+        .stat {
+            width: 90%;
+            background-color: gray;
+            height: 10px;
+            border-radius: 10px;
+            align-self: center;
+            .stat-fill{
+                background-color: aqua;
+                height: 10px;
+                border-radius: 10px;
+                width: 20%;
+            }
+        }
     }
 
     .total,
     .monthly-income {
         display: flex;
-        justify-content: space-around;
         background-color: $clr1;
+        justify-content: space-around;
         color: white;
         font-weight: 500;
 
@@ -68,6 +95,7 @@
         p:first-child {
             font-size: 0.8rem;
         }
+
     }
 
     .total {
@@ -79,7 +107,7 @@
         grid-area: some;
     }
 
- 
+
     @media (max-width:650px) {
         display: flex;
         flex-direction: column;
