--- a/src/assets/styles/cmps/_user-msg.scss
+++ b/src/assets/styles/cmps/_user-msg.scss
@@ -5,7 +5,7 @@
     left: 50%;
     transform: translate(-50%);
     padding: 1em;
-    width: 90%;
+    width: 40%;
     border-radius: 10px;
     z-index: 100;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -22,5 +22,9 @@
 
     &.alert-error {
         background-color: lightcoral;
+    }
+
+    @media(max-width:650px) {
+        width: 90%;
     }
 }
