--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -33,6 +33,7 @@
         height: 100%;
         right: 0%;
         z-index: 20;
+        margin: 0;
     }
 
     .student {
@@ -65,9 +66,24 @@
                     height: 100%;
                     width: 100%;
                     max-width: 25px;
+                    opacity: 0.5;
+
+                    &.active-status {
+                        opacity: 1 !important;
+                    }
                 }
             }
         }
+    }
+
+    .lesson-info {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        padding: 10px;
+        border-radius: 10px;
     }
 
     @media (max-width:650px) {
