--- a/src/assets/styles/cmps/stats.scss
+++ b/src/assets/styles/cmps/stats.scss
@@ -34,14 +34,15 @@
                 }
 
                 .earning {
-                    position: absolute;
-                    left: 20px;
-                    background-color: white;
-                    border-radius: 5px;
-                    padding: 5px;
-                    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-                    top: -30px;
                     display: none;
+                    position: absolute;
+                    top: -30px;
+                    left: 20px;
+                    font-size: 0.8rem;
+                    padding: 5px;
+                    border-radius: 5px;
+                    background-color: white;
+                    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
                     z-index: 20;
                 }
             }
