--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -5,6 +5,7 @@
         padding: 0;
         margin: 0;
         gap: 10px;
+        margin-bottom: 10px;
 
         li {
             flex: 1 0 auto;
@@ -35,6 +36,20 @@
                     right: 5px;
                     top: 5px;
                 }
+            }
+        }
+
+        .lessons-imgs {
+            display: flex;
+            gap: 5px;
+
+            div {
+                display: flex;
+            }
+
+            img {
+                width: 20px;
+                align-self: center;
             }
         }
     }
