--- a/src/assets/styles/views/user-details.scss
+++ b/src/assets/styles/views/user-details.scss
@@ -38,6 +38,22 @@
 
     .students-list {
         grid-area: list;
+
+        ul {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            height: 100%;
+            width: 100%;
+
+            li {
+                width: 10%;
+
+                button {
+                    padding: 10px;
+                }
+            }
+        }
     }
 
     .stats {
@@ -46,6 +62,11 @@
 
     .student-info {
         grid-area: student;
+
+        a {
+            color: $clr4;
+            font-weight: 600;
+        }
 
         .lessons-imgs {
             display: flex;
@@ -62,14 +83,37 @@
         background-color: $clr1;
         display: flex;
         flex-direction: column;
+        gap: 10px;
+
+        div {
+            gap: 8px;
+        }
+
+        .month-name {
+            line-height: normal;
+        }
+
+        button {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            width: 100%;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                width: 10px;
+            }
+        }
 
         .stat {
             width: 90%;
-            background-color: gray;
+            background-color: rgba(77, 184, 184, 0.493);
             height: 10px;
             border-radius: 10px;
             align-self: center;
-            .stat-fill{
+
+            .stat-fill {
                 background-color: aqua;
                 height: 10px;
                 border-radius: 10px;
@@ -81,32 +125,38 @@
     .total,
     .monthly-income {
         display: flex;
+        align-items: baseline;
+        width: 100%;
         background-color: $clr1;
-        justify-content: space-around;
         color: white;
         font-weight: 500;
+
+        .month-name {
+            flex: 2;
+            text-align: center;
+        }
 
         div {
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            align-items: center;
+            width: 62px;
         }
 
         p:first-child {
             font-size: 0.8rem;
         }
-
     }
 
     .total {
         grid-area: total;
         flex-direction: column;
+        justify-content: space-around;
     }
 
     .some {
         grid-area: some;
     }
-
 
     @media (max-width:650px) {
         display: flex;
