--- a/src/assets/styles/cmps/calendar.scss
+++ b/src/assets/styles/cmps/calendar.scss
@@ -35,8 +35,9 @@
         td {
             border-radius: 10px;
             text-align: center;
+            width: calc(100%/7);
         }
-
+        
         td {
             cursor: pointer;
             padding: 5px;
