--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -66,10 +66,16 @@
                     height: 100%;
                     width: 100%;
                     max-width: 25px;
-                    opacity: 0.5;
-
+                    height: 25px;
+                    border-radius: 25px;
+                    opacity: 0.4;
+                    transition: 0.6s;
+                    &:hover{
+                        opacity: 0.8;
+                    }
                     &.active-status {
-                        opacity: 1 !important;
+                        opacity: 1 ;
+                        // box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
                     }
                 }
             }
