--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -1,4 +1,18 @@
 .students-container {
+    // width: 100%;
+
+    .students-header {
+        display: flex;
+        align-items: center;
+        margin-block: 20px;
+        gap: 20px;
+
+        >* {
+            margin: 0;
+        }
+
+    }
+
     .student-list {
         display: flex;
         flex-wrap: wrap;
@@ -26,6 +40,7 @@
                 .student-name {
                     font-size: 1.3rem;
                     font-weight: 500;
+                    // line-height: 1;
                 }
 
                 .student-day {
@@ -43,7 +58,6 @@
         .lessons-imgs {
             display: flex;
             gap: 5px;
-
             div {
                 display: flex;
             }
