--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import "cmps/add-student";
 
 //views
+@import "views/home";
 @import "views/login";
 @import "views/today";
 @import "views/students";
