--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -65,8 +65,8 @@
                 img {
                     height: 100%;
                     width: 100%;
-                    max-width: 25px;
-                    height: 25px;
+                    // max-width: 25px;
+                    // height: 25px;
                     border-radius: 25px;
                     opacity: 0.4;
                     transition: 0.6s;
