--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -90,6 +90,7 @@
         background-color: white;
         padding: 10px;
         border-radius: 10px;
+        z-index: 100;
     }
 
     @media (max-width:650px) {
