--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -80,6 +80,7 @@ ul {
     height: 100vh;
     width: 100%;
     background-color: #e1eceb;
+    // min-height: 200vh;
 
     >* {
         width: 80%;
