--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -82,6 +82,7 @@ header {
 
     @media (max-width:650px) {
         z-index: 100;
+
         img {
             width: 30px !important;
             height: 30px !important;
@@ -92,15 +93,27 @@ header {
             border-radius: 0px;
 
             .loggedin-user {
-
-                background-color: transparent;
+                background-color: rgb(57, 70, 65);
+                position: absolute;
+                width: 70px;
+                height: 70px;
+                top: -50%;
+                left: 50%;
+                transform: translateX(-50%);
+                border-radius: 70px;
+                outline: 4px solid white;
+                p {
+                    font-size: 0.7rem;
+                }
             }
 
             .link-container {
                 padding-inline-start: 0px;
                 display: flex;
                 justify-content: center;
-                .a-container{
+
+                .a-container {
+
                     &:hover,
                     &.active {
                         background-color: #e1ecebcb;
@@ -108,6 +121,7 @@ header {
                         transition: background-color 0.5s;
                     }
                 }
+
                 p {
                     display: none;
                 }
