--- a/src/assets/styles/views/user-details.scss
+++ b/src/assets/styles/views/user-details.scss
@@ -41,16 +41,19 @@
 
         ul {
             display: flex;
-            flex-direction: column;
             flex-wrap: wrap;
-            height: 100%;
             width: 100%;
 
             li {
-                width: 10%;
+                flex: 1 1 20%;
+                padding: 5px;
+                max-width: 25%;
 
                 button {
-                    padding: 10px;
+                    margin: 0;
+                    width: 100%;
+                    min-width: 100px;
+                    padding: 15px;
                 }
             }
         }
@@ -63,18 +66,22 @@
     .student-info {
         grid-area: student;
 
+        li {
+            display: flex;
+            flex-direction: column;
+            align-items: baseline;
+            // gap: 5px;
+        }
+
         a {
             color: $clr4;
             font-weight: 600;
         }
 
-        .lessons-imgs {
-            display: flex;
-            justify-content: space-around;
-
-            img {
-                width: 30px;
-            }
+        button {
+            padding: 10px;
+            margin: 0;
+            margin-bottom: 3px;
         }
     }
 
@@ -161,6 +168,14 @@
     @media (max-width:650px) {
         display: flex;
         flex-direction: column;
+
+        .students-list {
+            ul {
+                li {
+                    max-width: 50%;
+                }
+            }
+        }
 
         .stats {
             height: 250px;
