--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,6 +27,7 @@
 @import "views/today";
 @import "views/students";
 @import "views/journal";
+@import "views/dashoboard";
 @import "views/user-details";
 @import "views/student-details";
 
