--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -24,6 +24,22 @@ body {
 
 }
 
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+button,
+input,
+a,
+label,
+span,
+p {
+    font-family: varela;
+}
+
 h1,
 h2,
 h3,
