--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -8,6 +8,30 @@ $clr6: #fff;
 $clr7: #3d5654;
 $clr8: #425c5a;
 
+// $clr1: #FFDD86;
+// $clr2: #515c5e;
+// $clr3: #574f7d;
+// $clr4: #95adbe;
+// $clr5: #1B365C;
+// $clr6: #fff;
+// $clr7: #3d5654;
+// $clr8: #FFDD86;
+
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6,
+// p,
+// a {
+//     color: #1B365C;
+// }
+
+//  8C613B
+//  BFA27E
+//  F2CE16
+
 // Breakpoints
 $mobile-breakpoint: 460px;
 $narrow-breakpoint: 720px;
