--- a/src/assets/styles/views/user-details.scss
+++ b/src/assets/styles/views/user-details.scss
@@ -1,3 +1,11 @@
-.user-detail-container{
-    
+.user-detail-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    >* {
+        background-color: $clr6;
+        padding: 10px;
+        border-radius: 5px;
+    }
 }
