--- a/src/assets/styles/cmps/add-student.scss
+++ b/src/assets/styles/cmps/add-student.scss
@@ -57,6 +57,29 @@
             .custom-select:hover {
                 border-color: #aaa;
             }
+
+        }
+
+        .btn-container {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            button {
+                font-size: 11px;
+                // opacity: 0.5;
+
+                &.not-active {
+                    opacity: 0.5;
+                }
+            }
+        }
+
+        .lessons-info-container {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
         }
     }
 
