--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -35,6 +35,7 @@
             display: flex;
             justify-content: space-between;
             margin-bottom: 20px;
+
             h3 {
                 margin-bottom: 0;
                 align-self: center;
@@ -50,12 +51,35 @@
             .lesson-item {
                 display: flex;
                 justify-content: space-between;
+                align-items: center;
+
+                .edit-lesson {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    button {
+                        width: 35px;
+                        height: 35px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 7px;
+
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+                }
             }
 
             .btns-container {
                 display: flex;
                 gap: 20px;
                 height: 100%;
+                justify-content: center;
+                align-items: center;
 
                 button {
                     background-color: transparent;
