--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -22,6 +22,9 @@ body {
     font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
         Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 
+    @media(min-width:650px) {
+        overflow: hidden;
+    }
 }
 
 
@@ -111,6 +114,7 @@ ul {
         min-height: 100vh;
         flex-direction: column;
         padding-bottom: 10vh;
+
         >* {
             width: 100%;
         }
