--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "cmps/day";
 @import "cmps/stats";
 @import "cmps/add-student";
+@import "cmps/month-table";
 
 //views
 @import "views/home";
