--- a/src/assets/styles/cmps/month-table.scss
+++ b/src/assets/styles/cmps/month-table.scss
@@ -13,7 +13,7 @@
         margin: 0;
         padding: 0;
         table-layout: fixed;
-        
+
         th,
         td {
             border-bottom: 1px solid #ddd;
@@ -42,36 +42,54 @@
         }
     }
 
+    .card {
+        display: none;
+    }
+
     @media screen and (max-width: 600px) {
+        .table-container {
+            overflow: hidden;
+        }
+
         table {
-            thead {
-                display: none;
+            display: none;
+        }
+
+        .card {
+            display: block;
+            background-color: white;
+            margin-bottom: 15px;
+            padding: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+
+            .card-header {
+                background-color: #4CAF50;
+                color: white;
+                padding: 10px;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
             }
 
-            tbody,
-            tbody tr,
-            tbody td {
-                display: block;
-                width: 100%;
+            .card-body {
+                padding: 10px;
             }
 
-            tbody tr {
-                margin-bottom: 15px;
-            }
+            .card-row {
+                margin-bottom: 10px;
+                display: flex;
 
-            tbody td {
-                // text-align: right;
-                padding-left: 50%;
-                position: relative;
+                &.last {
+                    margin-bottom: 0;
+                }
 
-                &::before {
-                    content: attr(data-label);
-                    position: absolute;
-                    left: 0;
-                    width: 50%;
-                    padding-left: 15px;
+                &>span {
+                    display: block;
                     font-weight: bold;
-                    // text-align: left;
+                }
+
+                &>div {
+                    padding-left: 10px;
                 }
             }
         }
