--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -130,3 +130,14 @@ ul {
         }
     }
 }
+
+.main-loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    img {
+        width: 100px;
+        height: 100px;
+    }
+}
