--- a/src/assets/styles/cmps/month-table.scss
+++ b/src/assets/styles/cmps/month-table.scss
@@ -1,31 +1,34 @@
 .charts-container {
+    padding: 15px;
+
+    .chart-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-block: 15px;
+        // margin-inline: 10px;
+
+        button {
+            padding-top: 7px;
+            margin: 0;
+            border-radius: 50%;
+            max-width: 40px;
+            max-height: 40px;
+
+            img {
+                width: 80%;
+                height: 100%;
+                border-radius: 100%;
+            }
+
+        }
+    }
 
     .table-container {
         overflow-x: auto;
-        margin: 10px;
         border-radius: 10px;
         box-shadow: 0 4px 6px rgba(87, 86, 86, 0.1);
 
-        .chart-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            button {
-                padding-top: 7px;
-                margin: 0;
-                border-radius: 50%;
-                max-width: 40px;
-                max-height: 40px;
-
-                img {
-                    width: 80%;
-                    height: 100%;
-                    border-radius: 100%;
-                }
-
-            }
-        }
     }
 
     table {
@@ -69,46 +72,15 @@
 
     @media screen and (max-width: 600px) {
         .table-container {
-            overflow: hidden;
-        }
+            th {
+                padding: 5px;
 
-        .card {
-            display: block;
-            background-color: white;
-            margin-bottom: 15px;
-            padding: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-
-            .card-header {
-                background-color: #4CAF50;
-                color: white;
-                padding: 10px;
-                border-top-left-radius: 5px;
-                border-top-right-radius: 5px;
-            }
-
-            .card-body {
-                padding: 10px;
-            }
-
-            .card-row {
-                margin-bottom: 10px;
-                display: flex;
-
-                &.last {
-                    margin-bottom: 0;
-                }
-
-                &>span {
-                    display: block;
-                    font-weight: bold;
-                }
-
-                &>div {
-                    padding-left: 10px;
+                button {
+                    margin: 0;
+                    margin-bottom: 3px;
                 }
             }
         }
+
     }
 }
