--- a/src/assets/styles/cmps/stats.scss
+++ b/src/assets/styles/cmps/stats.scss
@@ -1,7 +1,11 @@
 .stats-page-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    // height: 100%;
+    height: 250px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 5px;
 
     .stats-container {
         display: flex;
