--- a/src/assets/styles/views/dashoboard.scss
+++ b/src/assets/styles/views/dashoboard.scss
@@ -85,6 +85,10 @@
 
     .stats {
         grid-area: stats;
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        justify-content: space-between;
     }
 
     .student-info {
@@ -183,6 +187,7 @@
         grid-area: some;
     }
 
+
     @media (max-width:650px) {
         display: flex;
         flex-direction: column;
@@ -198,5 +203,18 @@
         .stats {
             height: 250px;
         }
+    }
+}
+
+.charts-stats-container {
+    display: flex;
+    padding: 15px;
+
+    .stats-page-container {
+        width: 100%;
+    }
+
+    @media (max-width:650px) {
+        flex-direction: column;
     }
 }
