--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -86,6 +86,23 @@
                 align-self: center;
             }
         }
+
+    }
+
+    .delete-student-container {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        background-color: #ffffff;
+        padding: 10px;
+        border-radius: 5px;
+
+        .btns-delete-container {
+            display: flex;
+        }
     }
 
     @media (max-width:650px) {
