--- a/src/assets/styles/cmps/add-student.scss
+++ b/src/assets/styles/cmps/add-student.scss
@@ -13,6 +13,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 15px;
 
         >* {
             margin: 5px;
@@ -80,6 +81,8 @@
             display: flex;
             flex-direction: column;
             width: 100%;
+            gap: 5px;
+            align-items: center;
         }
     }
 
