--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -59,12 +59,13 @@
                     justify-content: center;
 
                     button {
-                        width: 35px;
-                        height: 35px;
+                        width: 30px;
+                        height: 30px;
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         padding: 7px;
+                        margin: 2px;
 
                         img {
                             width: 100%;
@@ -76,7 +77,7 @@
 
             .btns-container {
                 display: flex;
-                gap: 20px;
+                gap: 10px;
                 height: 100%;
                 justify-content: center;
                 align-items: center;
