--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -109,5 +109,12 @@
 
     @media (max-width:650px) {
         padding: 0;
+
+        .student {
+
+            .btns-container {
+                width: 45%;
+            }
+        }
     }
 }
