--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -30,6 +30,11 @@
         }
     }
 
+    .inactive-btn {
+        background-color: white;
+        color: $clr1;
+    }
+
     .days-container {
         display: flex;
 
