--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -136,8 +136,24 @@ ul {
     align-items: center;
     justify-content: center;
     height: 100vh;
+
     img {
         width: 100px;
         height: 100px;
+    }
+}
+
+.arrival-btn {
+    min-width: 25px;
+    height: 25px;
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+
+    img {
+        width: 100%;
+        height: 100%;
+        border-radius: 25px;
+
     }
 }
