--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -48,6 +48,34 @@
             justify-content: center;
             flex-direction: column;
 
+            .monthly-header {
+                display: flex;
+                position: relative;
+
+                h4 {
+                    justify-self: end;
+                    align-self: center;
+                }
+
+                button {
+                    min-width: 25px;
+                    height: 25px;
+                    background-color: transparent;
+                    padding: 0;
+                    margin: 0;
+                    position: absolute;
+                    right: 0;
+
+                    // background-color: #c9e2d9;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        border-radius: 25px;
+
+                    }
+                }
+            }
+
             .lesson-item {
                 display: flex;
                 justify-content: space-between;
@@ -86,12 +114,13 @@
                     background-color: transparent;
                     padding: 0;
                     margin: 0;
+                    // width: 25px;
                     height: 100%;
 
                     img {
                         height: 100%;
                         width: 100%;
-                        max-width: 25px;
+                        width: 25px;
                         height: 25px;
                         border-radius: 25px;
                         opacity: 0.4;
