--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -144,7 +144,7 @@ ul {
 }
 
 .arrival-btn {
-    min-width: 25px;
+    width: 25px;
     height: 25px;
     background-color: transparent;
     padding: 0;
@@ -154,6 +154,5 @@ ul {
         width: 100%;
         height: 100%;
         border-radius: 25px;
-
     }
 }
