--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -2,7 +2,7 @@
 
     .students-header {
         display: flex;
-        align-items: center;
+        // align-items: center;
         flex-direction: column;
         margin-block: 20px;
         gap: 10px;
