--- a/src/assets/styles/views/user-details.scss
+++ b/src/assets/styles/views/user-details.scss
@@ -2,10 +2,26 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    cursor: pointer;
 
     >* {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         background-color: $clr6;
         padding: 10px;
         border-radius: 5px;
+        overflow: hidden;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            >* {
+                margin: 3px;
+            }
+        }
     }
 }
