--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -80,11 +80,17 @@
                             font-size: 0.8rem;
                         }
 
-                        button {
+                        .delete-btn {
                             position: absolute;
-                            right: 5px;
-                            top: 5px;
+                            right: 3px;
+                            top: 3px;
                         }
+
+                        // .activate-btn {
+                        //     position: absolute;
+                        //     right: 3px;
+                        //     bottom: 3px;
+                        // }
                     }
                 }
             }
