--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -1,4 +1,12 @@
 // Font Sizes
+.fs8 {
+    font-size: rem(8px);
+}
+
+.fs10 {
+    font-size: rem(10px);
+}
+
 .fs12 {
     font-size: rem(12px);
 }
