--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -47,6 +47,7 @@
             gap: 20px;
             justify-content: center;
             flex-direction: column;
+            position: relative;
 
             .monthly-header {
                 display: flex;
@@ -142,7 +143,7 @@
             .lesson-list {
                 display: flex;
                 flex-direction: column;
-
+                position: relative;
                 li {
                     display: flex;
                     align-items: center;
