--- a/src/assets/styles/views/dashoboard.scss
+++ b/src/assets/styles/views/dashoboard.scss
@@ -185,6 +185,11 @@
 
     .some {
         grid-area: some;
+        ul{
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
     }
 
 
