--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -144,6 +144,7 @@
                 display: flex;
                 flex-direction: column;
                 position: relative;
+
                 li {
                     display: flex;
                     align-items: center;
@@ -159,10 +160,13 @@
     }
 
     @media (max-width:650px) {
+        margin-bottom: 30px;
         flex-direction: column;
+        // justify-content: center;
         gap: 20px;
-
+        
         >* {
+            // align-items: center;
             width: 100%;
         }
     }
