widget deep stats and groups

--- a/src/assets/styles/cmps/stats.scss
+++ b/src/assets/styles/cmps/stats.scss
@@ -29,7 +29,8 @@
                 width: 25%;
                 background-color: $clr7;
 
-                &:hover {
+                &:hover,
+                &:active {
                     background-color: #43726e;
 
                     p.earning {
