--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -21,6 +21,8 @@
 @import "cmps/stats";
 @import "cmps/add-student";
 @import "cmps/month-table";
+@import "cmps/addStudentToGroup";
+@import "cmps/deep-statistics";
 
 //views
 @import "views/home";
