--- a/src/assets/styles/cmps/month-table.scss
+++ b/src/assets/styles/cmps/month-table.scss
@@ -28,7 +28,15 @@
         overflow-x: auto;
         border-radius: 10px;
         box-shadow: 0 4px 6px rgba(87, 86, 86, 0.1);
+        max-height: 500px;
+        overflow-y: scroll;
 
+        ::-webkit-scrollbar-track {
+            background-color: #d41717; // Background color of the track
+            border-radius: 10px;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
     }
 
     table {
@@ -44,11 +52,18 @@
             text-align: center;
         }
 
-        thead th {
-            background-color: $clr4;
-            color: white;
-            // text-align: left;
-            padding: 12px;
+        thead {
+            position: sticky;
+            top: 0;
+            // background-color: white; // Optional: Ensures header background remains opaque when scrolling
+            z-index: 1; // Keep the header on top of other rows while scrolling
+
+            th {
+                background-color: $clr4;
+                color: white;
+                // text-align: left;
+                padding: 12px;
+            }
         }
 
         tbody td {
@@ -63,6 +78,28 @@
 
         tbody tr:hover {
             background-color: #ddd;
+        }
+
+        .total-line {
+            position: sticky;
+            bottom: 0;
+            background-color: $clr4 !important;
+            color: white;
+            z-index: 1; // Ensures the "Total" row stays above other rows while scrolling
+        }
+
+        .student-name {
+            max-width: 150px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            cursor: pointer;
+        }
+
+        .student-name.expanded {
+            white-space: normal; // Allow wrapping when expanded
+            overflow: visible;
+            max-width: none;
         }
     }
 
@@ -80,7 +117,35 @@
                     margin-bottom: 3px;
                 }
             }
+
+            td {
+                // padding-inline: 8px;
+                // padding-block: 10px;
+                padding: 8px;
+            }
+
+            .student-name {
+                font-size: 16px;
+                font-weight: 600;
+            }
         }
 
     }
 }
+
+//   .table-container::-webkit-scrollbar {
+//     width: 1px; // Set scrollbar width
+//     color: #d41717;
+//   }
+
+//   .table-container::-webkit-scrollbar-track {
+//     background-color: transparent; // Background color of the track
+//     border-radius: 10px;
+//     margin-top: 5px;
+//     margin-bottom: 5px;
+//   }
+
+//   .table-container::-webkit-scrollbar-thumb {
+//     background-color: #e42323;
+//     border-radius: 10px;
+//   }
