--- a/src/assets/styles/views/dashoboard.scss
+++ b/src/assets/styles/views/dashoboard.scss
@@ -136,15 +136,15 @@
 
         .stat {
             width: 90%;
-            background-color: rgba(77, 184, 184, 0.493);
-            height: 10px;
-            border-radius: 10px;
+            background-color: rgba(118, 161, 161, 0.397);
+            height: 8px;
+            border-radius: 8px;
             align-self: center;
 
             .stat-fill {
-                background-color: aqua;
-                height: 10px;
-                border-radius: 10px;
+                background-color:  rgb(66, 202, 202);
+                height: 8px;
+                border-radius: 8px;
                 width: 20%;
             }
         }
