--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -112,6 +112,10 @@
                 }
             }
         }
+
+        .groups-container {
+            background-color: aqua;
+        }
     }
 
     .delete-student-container {
