--- a/src/assets/styles/cmps/deep-statistics.scss
+++ b/src/assets/styles/cmps/deep-statistics.scss
@@ -33,15 +33,15 @@
 
     .stat {
         width: 90%;
-        background-color: rgba(77, 184, 184, 0.493);
-        height: 10px;
-        border-radius: 10px;
+        background-color:  rgba(118, 161, 161, 0.397);
+        height: 5px;
+        border-radius: 5px;
         align-self: center;
 
         .stat-fill {
-            background-color: aqua;
-            height: 10px;
-            border-radius: 10px;
+            background-color: rgb(66, 202, 202);
+            height: 5px;
+            border-radius: 5px;
             width: 20%;
         }
     }
