--- a/src/assets/styles/views/student-details.scss
+++ b/src/assets/styles/views/student-details.scss
@@ -34,7 +34,7 @@
         .btn-container {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
 
             h3 {
                 margin-bottom: 0;
@@ -55,7 +55,8 @@
                 width: 100%;
 
                 h4 {
-                    justify-self: end;
+                    margin-top: 10px;
+                    // justify-self: end;
                     align-self: center;
                 }
 
@@ -73,7 +74,7 @@
                         width: 100%;
                         height: 100%;
                         border-radius: 25px;
-
+                        margin-top: 5px;
                     }
                 }
             }
@@ -156,17 +157,30 @@
                 }
             }
         }
+    }
 
+    .notes-container {
+        background-color: white;
+        padding: 10px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+
+        h3 {
+            align-self: center;
+        }
+
+        button {
+            padding: 10px;
+        }
     }
 
     @media (max-width:650px) {
         margin-bottom: 30px;
         flex-direction: column;
-        // justify-content: center;
         gap: 20px;
-        
+
         >* {
-            // align-items: center;
             width: 100%;
         }
     }
