--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -70,9 +70,17 @@
         align-items: center;
     }
 
+    &.align-end {
+        align-items: end;
+    }
+
     &.gap20 {
         gap: 20px;
     }
+}
+
+.bold {
+    font-weight: 700
 }
 
 // Media helpers
