--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -28,6 +28,27 @@
         &:last-child {
             border-bottom: 1px solid rgba(207, 207, 207, 0.699);
         }
+
+        .note-img {
+            position: absolute;
+            height: 18px;
+            width: 18px;
+            border-radius: 5px;
+            left: 0;
+            background-color: $clr1;
+            padding: 2px;
+            margin-left: 5px;
+            // opacity: 0.4;
+            // transition: 0.4s;
+
+            &:hover {
+                opacity: 0.8;
+            }
+
+            &.active-status {
+                opacity: 1;
+            }
+        }
     }
 
     .hour-label {
@@ -98,14 +119,35 @@
     }
 
     .lesson-info {
+        display: flex;
+        flex-direction: column;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: white;
         padding: 10px;
         border-radius: 10px;
         z-index: 100;
+        background-color: white;
+        align-items: center;
+
+        .note-input {
+            border: 1px solid rgb(172, 166, 166);
+            padding: 3px;
+            padding-inline: 5px;
+            border-radius: 5px;
+            font-size: 12px;
+            outline: none;
+            resize: none;
+            overflow: hidden;
+        }
+
+        .close--lesson-btn {
+            position: absolute;
+            right: 4px;
+            top: 4px;
+            // padding: 5px;
+        }
     }
 
     @media (max-width:650px) {
