--- a/src/assets/styles/cmps/day.scss
+++ b/src/assets/styles/cmps/day.scss
@@ -123,11 +123,19 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        padding: 10px;
+        padding: 30px;
+        // padding-top: 30px;
         border-radius: 10px;
         z-index: 100;
         background-color: white;
         align-items: center;
+        gap: 8px;
+
+        a {
+            list-style: none;
+            color: $clr4;
+            font-weight: 600;
+        }
 
         .note-input {
             border: 1px solid rgb(172, 166, 166);
