--- a/src/assets/styles/cmps/add-student.scss
+++ b/src/assets/styles/cmps/add-student.scss
@@ -1,11 +1,11 @@
 .add-student-container {
-    width: 50%;
+    // width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: white;
     border-radius: 10px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
     padding: 15px;
 
     form {
