--- a/src/assets/styles/views/students.scss
+++ b/src/assets/styles/views/students.scss
@@ -1,5 +1,11 @@
 .students-container {
 
+    &.no-scroll {
+        overflow: hidden !important;
+        height: 100%;
+        overscroll-behavior: none !important;
+    }
+
     .students-header {
         display: flex;
         // align-items: center;
